[package]
name = "jackmaker"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "jackmaker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
crossbeam = "0.8.2"
crossbeam-channel = "0.5.6"
winit = "0.27.4"
enigo = "0.0.14"
ggez = "0.8.0"
jack = "0.9.0"
clap = { version = "4.0.4", features = ["derive"] }

